--- a/paludis/repositories/e/ebuild_entries_suffixes.conf
+++ b/paludis/repositories/e/ebuild_entries_suffixes.conf
@@ -34,6 +34,14 @@ suffix_pbin-1+6_known = yes
 guess_eapi_pbin-1+6 = pbin-1+6
 manifest_key_pbin-1+6 = PBIN
 
+suffix_pbin-1+7_known = yes
+guess_eapi_pbin-1+7 = pbin-1+7
+manifest_key_pbin-1+7 = PBIN
+
+suffix_pbin-1+8_known = yes
+guess_eapi_pbin-1+8 = pbin-1+8
+manifest_key_pbin-1+8 = PBIN
+
 suffix_pbin-1+exheres-0_known = yes
 guess_eapi_pbin-1+exheres-0 = pbin-1+exheres-0
 manifest_key_pbin-1+exheres-0 = PBIN
