cmake: Use FindPython3
Support for python2 has been removed in [1], so we can just use
FindPython3 as well.

[1] 3d8f319b87d07a9fb0b55d2623a47fde31c720d8

--- a/paludis/CMakeLists.txt
+++ b/paludis/CMakeLists.txt
@@ -228,7 +228,8 @@ if(ENABLE_PYTHON)
                           libpaludis
                           libpaludisutil
                           Boost::python
-                          Python::Python)
+                          Python3::Python
+                       )
 endif()
 
 if(ENABLE_PBINS)
