ci: add x86_64 to .build-template
we only have x86_64 images so need to ensure only valid runners
are used

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,8 @@ stages:
 .build-template: &build-template
   stage: build
   image: paludis/${DISTRIBUTION}-${COMPILER}:${VERSION}
+  tags:
+    - x86_64
   script:
     - *build-script
     - ctest -V
