--- a/ci/docker/gentoo/paludis-gentoo-gcc/Dockerfile
+++ b/ci/docker/gentoo/paludis-gentoo-gcc/Dockerfile
@@ -4,9 +4,9 @@ FROM gentoo/stage3:latest
 # copy the entire portage volume in
 COPY --from=portage /var/db/repos/gentoo /var/db/repos/gentoo
 
-COPY ./config/package.use /etc/portage/
-COPY ./config/package.mask /etc/portage/
-COPY ./config/package.accept_keywords /etc/portage/
+COPY ./config/package.use /etc/portage/package.use/use.conf
+COPY ./config/package.mask /etc/portage/package.mask/mask.conf
+COPY ./config/package.accept_keywords /etc/portage/package.accept_keywords/keywords.conf
 COPY ./config/sets/paludis-deps /etc/portage/sets/
 
 RUN emerge --update --newuse --deep -v @world \
