--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ cmake_policy(SET CMP0058 NEW)
 
 project(paludis VERSION 3.0.0
     DESCRIPTION "The one true package mangler"
-    HOMEPAGE_URL "https://paludis.exherbo.org/"
+    HOMEPAGE_URL "https://paludis.exherbolinux.org/"
 )
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")
