--- a/doc/index.html.part.in
+++ b/doc/index.html.part.in
@@ -11,14 +11,14 @@
         href="changelog.html">changelog</a>.</li>
     <li>You should generally install Paludis using your distribution's package manager, rather than by hand. However, if
         you can't do that, you can <a href="http://paludis.exherbo.org/download/">download Paludis</a> or
-        <a href="http://git.exherbo.org/paludis/paludis.git/">browse the source</a>.</li>
+        <a href="https://gitlab.exherbo.org/paludis/paludis/">browse the source</a>.</li>
 </ul>
 
 <h2>Overview</h2>
 
-<p>Paludis is a multi-format package manager. It can currently be used on <a href="http://www.gentoo.org/">Gentoo</a>
-and derivatives, using the ebuild and VDB repository formats, and on <a href="http://www.exherbo.org/">Exherbo</a> using
-the exheres repository format.</p>
+<p>Paludis is a multi-format package manager. It can currently be used on <a href="https://www.gentoo.org/">Gentoo</a>
+and derivatives, using the ebuild and VDB repository formats, and on <a href="https://www.exherbolinux.org/">Exherbo</a>
+using the exheres repository format.</p>
 
 <ul>
     <li><a href="overview/features.html">Features</a>: an overview of Paludis, and how it differs from its predecessor,
