--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,8 +58,8 @@ set(PYTHON_SUPPORTED_VERSIONS 3.6 3.7 3.8 3.9 3.10 3.11 3.12)
 set(PYTHON_VERSION "3.11" CACHE STRING
   "Python version (${PYTHON_SUPPORTED_VERSIONS}) (requires corresponding Boost.Python as well)")
 
-set(RUBY_SUPPORTED_VERSIONS 3.0 3.1 3.2 3.3)
-set(RUBY_VERSION "3.2" CACHE STRING "Ruby Version (${RUBY_SUPPORTED_VERSIONS})")
+set(RUBY_SUPPORTED_VERSIONS 3.1 3.2 3.3)
+set(RUBY_VERSION "3.3" CACHE STRING "Ruby Version (${RUBY_SUPPORTED_VERSIONS})")
 
 set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
 set(THREADS_PREFER_PTHREAD_FLAG TRUE)
